--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     }
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.12",
+    "@types/leaflet.markercluster": "^1.5.4",
     "@ws-ui/craftjs-core": "0.2.5",
     "@ws-ui/craftjs-layers": "0.2.2",
     "@ws-ui/craftjs-utils": "0.2.1",
     "@ws-ui/webform-editor": "0.2.13",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
